--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gsap": "^2.1.3",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-gsap": "^1.2.0",
+    "react-scripts": "3.0.1",
+    "react-scrollmagic": "^2.1.1",
+    "scrollmagic": "^2.0.7",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
