--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,14 +4,10 @@
   "private": true,
   "dependencies": {
     "gsap": "^2.1.3",
-    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-gsap": "^1.2.0",
     "react-scripts": "3.0.1",
-    "react-scrollmagic": "^2.1.1",
-    "scrollmagic": "^2.0.7",
-    "styled-components": "^4.3.2"
+    "scrollmagic": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
