--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gsap": "^2.1.3",
+    "radium": "^0.25.2",
     "react": "^16.8.6",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
