--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gsap": "^2.1.3",
+    "jquery": "^3.4.1",
     "radium": "^0.25.2",
     "react": "^16.8.6",
     "react-animations": "^1.0.0",
